yaml-examples/handbrake/handbrake-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: handbrake
  namespace: default
spec:
  selector:
    app: handbrake
  ports:
  - port: 5800
    targetPort: 5800
